<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.federaltaxcalculator.Married">

    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitleMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/txtTitleMarried"
            android:textColor="#ff0000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtIncomeMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleMarried"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/hintMarried"
            android:inputType="number"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtIncomeMarried"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:id="@+id/radioGroup2">

            <RadioButton
                android:id="@+id/radDeducMarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radDeducMarried"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radNoDeducMarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/radNoDeducMarried"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btnMarried"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResultMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnMarried"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBackMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtResultMarried"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/btnBackMarried"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgMarried"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBackMarried"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imgMarried"
            app:srcCompat="@drawable/twoflowers" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
