<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.federaltaxcalculator.Single">

    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitleSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/txtTitleSingle"
            android:textColor="#FF0000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtIncomeSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitleSingle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/hintSingle"
            android:inputType="number"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtIncomeSingle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radDeducSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/radDeducSingle"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radNoDeducSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/radNoDeducSingle"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btnSingle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtResultSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSingle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnBackSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtResultSingle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/btnBackSingle"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBackSingle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/imgSingle"
            app:srcCompat="@drawable/oneflower" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
