<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.federaltaxcalculator.MainActivity">
    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/txtTitle"
            android:textColor="#FF0000"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/txtGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtTitle"
            android:layout_marginTop="15dp"
            android:entries="@array/txtGroup"
            android:prompt="@string/prompt"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btnSubmit"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imgTax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imgTax"
            app:srcCompat="@drawable/money" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
